# metadata-scrubber-tool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md
ornekler/: README.md
src/metadata_scrubber/: __init__.py  cli.py  core.py  models.py  utils.py  verify.py  verify_cli.py
src/metadata_scrubber/scrubbers/: __init__.py  audio.py  base.py  images.py  openxml.py  pdf.py  video.py
tests/: test_image_scrub.py  test_openxml_scrub.py  test_pdf_scrub.py  test_verify.py  test_video_scrub.py
